--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ li{list-style:none}
 html,body{ 
 	width:100%;
 	height:100%;
-	background:#313841;
+	background:#262A33;
  overflow-x: hidden;
 }
 
